Fixed image covering button

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -7,10 +7,10 @@
 }
 
 .image-and-map {
-  max-height: 500px;
+  max-height: 700px;
 }
 
 .post-image img {
-  max-height: 500px;
-  width: 100%;
+  height: 100%;
+  width: auto;
 }
